syntax = "proto3";

option java_multiple_files = true;

import "GrpcArtist.proto";
import "GrpcGenre.proto";

package hcmus.zingmp3;

enum SongStatusGrpc {
    APPROVAL_PENDING = 0;
    APPROVED = 1;
    REJECTED = 2;
    RELEASED = 3;
}

message SongRequestGrpc {
  string id = 1;
}

message SongResponseGrpc {
  string id =1;
  string alias = 2;
  string title = 3;
  string thumbnail = 4;
  repeated ArtistResponseGrpc artists = 5;
  repeated GenreGrpcResponse genres = 6;
  repeated ArtistResponseGrpc composers = 7;
  SongStatusGrpc status = 8;
  int32 releaseDate = 9;
  int32 listen = 10;
  int32 liked = 11;
  string lyric = 12;
  repeated string mediaIds = 13;
  string createdBy = 14;
  string createdDate = 15;
  string lastModifiedBy = 16;
  string lastModifiedDate = 17;
  double duration = 18;
}

service SongService {
  rpc getById(SongRequestGrpc) returns (SongResponseGrpc);
}